# karto_plugins

./: CHANGELOG.rst  CMakeLists.txt  karto_plugins.xml  package.xml
CMakeModules/: FindG2O.cmake
include/karto_plugins/: g2o_solver.h  srba_solver.h  vertigo_maxmix_solver.h  vertigo_switchable_solver.h
include/karto_plugins/calibration/: edge_se2_sensor_calib.h  odometry_measurement.h  types_sclam2d.h  vertex_odom_differential_params.h
src/: g2o_solver.cpp  srba_solver.cpp  vertigo_maxmix_solver.cpp  vertigo_switchable_solver.cpp
src/calibration/: closed_form_calibration.cpp  edge_se2_odom_differential_calib.cpp  edge_se2_pure_calib.cpp  edge_se2_sensor_calib.cpp  gm2dl_io.cpp  odometry_measurement.cpp  robot_laser_sclam.cpp  sclam_helpers.cpp  sclam_laser_calib.cpp  sclam_odom_laser.cpp  sclam_pure_calibration.cpp  types_sclam2d.cpp  vertex_odom_differential_params.cpp
test/: srba_test.cpp
