<?xml version="1.0"?>
<package>
  <name>karto_plugins</name>
  <version>0.1.2</version>
  <description>The karto_plugins package</description>

  <maintainer email="liz@todo.todo">liz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>slam_karto</build_depend>
  <build_depend>open_karto</build_depend>
  <build_depend>vertigo_slam</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>open_karto</run_depend>
  <run_depend>slam_karto</run_depend>
  <run_depend>vertigo_slam</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
    <slam_karto plugin="${prefix}/karto_plugins.xml" />
  </export>
</package>
